--- a/www/templates/Highcharts/examples/column-basic/index.htm
+++ b/www/templates/Highcharts/examples/column-basic/index.htm
@@ -34,7 +34,15 @@ $(function () {
                 'Oct',
                 'Nov',
                 'Dec'
-            ]
+            ],
+            labels: {
+                rotation: -45,
+                style: {
+                    fontSize: '13px',
+                    fontFamily: 'Verdana, sans-serif'
+                }
+            }
+
         },
         yAxis: {
             min: 0,
@@ -45,7 +53,7 @@ $(function () {
         tooltip: {
             headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
             pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-                '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+            '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
             footerFormat: '</table>',
             shared: true,
             useHTML: true
@@ -73,6 +81,8 @@ $(function () {
             data: [42.4, 33.2, 34.5, 39.7, 52.6, 75.5, 57.4, 60.4, 47.6, 39.1, 46.8, 51.1]
 
         }]
+
+
     });
 });
 		</script>
