--- a/www/templates/monitor/auto-monitor-pollutant-release-chart.html
+++ b/www/templates/monitor/auto-monitor-pollutant-release-chart.html
@@ -14,11 +14,10 @@ The Friends service returns an array of friend data
             <div class="col col-offset-10 col-33">
 
                 <div class="button-bar">
-                    <a class="button button-assertive ">监督检测</a>
+                    <a class="button button-assertive ">排放情况</a>
                     <div class="list">
 
                     </div>
-                <!--    <a class="button button-balanced ">废气监测</a>-->
 
                 </div>
 
@@ -63,8 +62,8 @@ The Friends service returns an array of friend data
     </div>
 
     <div class="card">
-    <!--    <div id="container" style="width:auto;height:auto"></div>
-        <div id="container1" style="width:auto;height:auto"></div>-->
+   <div id="container2" style="width:auto;height:auto;background-color: #009900"></div>
+
     </div>
     </ion-content>
 </ion-view>
