--- a/www/templates/monitor/auto-monitor-supervise-release-chart.html
+++ b/www/templates/monitor/auto-monitor-supervise-release-chart.html
@@ -14,7 +14,7 @@ The Friends service returns an array of friend data
             <div class="col col-offset-10 col-33">
 
                 <div class="button-bar">
-                    <a class="button button-assertive ">排放情况</a>
+                    <a class="button button-assertive ">监督检测</a>
                     <div class="list">
 
                     </div>
