--- a/www/templates/monitor/monitor-tabs.html
+++ b/www/templates/monitor/monitor-tabs.html
@@ -15,13 +15,18 @@ navigation history that also transitions its views in and out.
 
 
 
-  <ion-tab title="自动监测" icon-off="ion-ios7-speedometer-outline" icon-on="ion-ios7-speedometer" href="#/monitortabs/automonior/automoniorautomonitoritem">
+
+    <ion-tab title="自动监测" icon-off="ion-ios7-speedometer-outline" icon-on="ion-ios7-speedometer" href="#/monitortabs/automonior/automoniorautomonitoritem">
 
 
-    <ion-nav-view name="monitor-automonior"></ion-nav-view>
-  </ion-tab>
+        <ion-nav-view name="monitor-automonior"></ion-nav-view>
+    </ion-tab>
+
+    <ion-tab title="socket-chat" icon-off="ion-ios7-speedometer-outline" icon-on="ion-ios7-speedometer" href="#/monitortabs/socket">
 
 
+       <ion-nav-view name="monitor-socket"></ion-nav-view>
+    </ion-tab>
 
 
 </ion-tabs>
