--- a/www/templates/monitor/monitor-tabs.html
+++ b/www/templates/monitor/monitor-tabs.html
@@ -22,10 +22,10 @@ navigation history that also transitions its views in and out.
         <ion-nav-view name="monitor-automonior"></ion-nav-view>
     </ion-tab>
 
-    <ion-tab title="socket-chat" icon-off="ion-ios7-speedometer-outline" icon-on="ion-ios7-speedometer" href="#/monitortabs/socket">
+    <ion-tab title="socket-chat" icon-off="ion-ios7-speedometer-outline" icon-on="ion-ios7-speedometer" href="#/tabchat/chat">
 
 
-       <ion-nav-view name="monitor-socket"></ion-nav-view>
+
     </ion-tab>
 
 
